--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,12 @@ services:
       - ./:/app
     working_dir: /app
     command: tail -f /dev/null
+  db:
+    image: mysql:8.0.29
+    container_name: db
+    ports:
+      - 3306:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=my-secret-pw
+    volumes:
+      - ./docker/db/data:/var/lib/mysql
