--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,12 @@ services:
       - ./:/app
     working_dir: /app
     command: tail -f /dev/null
+    environment:
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_CREDENCIAL_USERNAME=${SMTP_CREDENCIAL_USERNAME}
+      - SMTP_CREDENCIAL_PASSWORD=${SMTP_CREDENCIAL_PASSWORD}
+      - SMTP_EMAIL_DISPLAY_NAME=${SMTP_EMAIL_DISPLAY_NAME}
   db:
     image: mysql:8.0.29
     container_name: db
