--- a/src/Infrastructure.Mail/Infrastructure.Mail.csproj
+++ b/src/Infrastructure.Mail/Infrastructure.Mail.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MailKit" Version="3.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UseCases\UseCases.csproj" />
+  </ItemGroup>
+
 </Project>
