feat: criacao de metodo de extensao em Infrastructure.Mail para configurar a injecao de dependencia no IServiceCollection

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\UseCases\UseCases.csproj" />
     <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\Infrastructure.Mail\Infrastructure.Mail.csproj" />
   </ItemGroup>
 
   <ItemGroup>
