--- a/src/Infrastructure.Mail/Infrastructure.Mail.csproj
+++ b/src/Infrastructure.Mail/Infrastructure.Mail.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.6.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
