refactor: renomeacao de UseCases para Handlers

--- a/src/Handlers.Tests/Handlers.Tests.csproj
+++ b/src/Handlers.Tests/Handlers.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UseCases\UseCases.csproj" />
+    <ProjectReference Include="..\Handlers\Handlers.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
