--- a/src/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/src/Infrastructure.Data/Infrastructure.Data.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\UseCases\UseCases.csproj" />
+    <ProjectReference Include="..\Handlers\Handlers.csproj" />
   </ItemGroup>
 
 </Project>
