--- a/src/Infrastructure.Mail/Infrastructure.Mail.csproj
+++ b/src/Infrastructure.Mail/Infrastructure.Mail.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UseCases\UseCases.csproj" />
+    <ProjectReference Include="..\Handlers\Handlers.csproj" />
   </ItemGroup>
 
 </Project>
