chore: adicao do servico de rabbitmq (broker) no docker-compose

--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,7 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_CREDENCIAL_USERNAME=
 SMTP_CREDENCIAL_PASSWORD=
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
