--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,10 @@ services:
       - SMTP_PORT=${SMTP_PORT}
       - SMTP_CREDENCIAL_USERNAME=${SMTP_CREDENCIAL_USERNAME}
       - SMTP_CREDENCIAL_PASSWORD=${SMTP_CREDENCIAL_PASSWORD}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
   db:
     image: mysql:8.0.29
     container_name: db
@@ -24,3 +28,9 @@ services:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
     volumes:
       - ./docker/db/data:/var/lib/mysql
+  broker:
+    image: rabbitmq:3-management
+    container_name: broker
+    ports:
+      - 8080:15672
+    hostname: my-rabbit
