--- a/src/Infrastructure.MessageBroker/Infrastructure.MessageBroker.csproj
+++ b/src/Infrastructure.MessageBroker/Infrastructure.MessageBroker.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Handlers\Handlers.csproj" />
+  </ItemGroup>
+
 </Project>
